--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <label for="password">Contraseña</label>
         <input type="password" name="password" class="box">
         <input type="submit" value="Ingresar" id="submit">
-        <p>¿No tienes una cuenta? <a id="register" href="">Regístrate aquí</a></p>
+        <p>¿No tienes una cuenta? <a id="register" href="registropersona.html">Regístrate aquí</a></p>
     </form>
     
 </body>
