--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <body>
 
     <nav>
+
         <div class="logo">
             <img src="img/Hotelia horizontal blanco.svg">
+            <label for="nav_menu">
             <i class="fa-solid fa-bars"></i>
+            </label>
+            <input type="checkbox"id="nav_menu" class="nav_input">
         </div>
-
         <div class="menu">
             <a href="#nosotros" class="item">Inicio</a>
             <a href="#ubicanos" class="item">Ubícanos</a>
